範本頁製作完畢 #20150311

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <ul>
           	<li><a href="content/profile.html" title="品牌故事" class="nav-01">品牌故事</a></li>
           	<li><a href="content/shop.html" title="商品櫥窗" class="nav-02">商品櫥窗</a></li>
-          	<li><a href="https://www.facebook.com/camomillablutaiwan/app_410312912374011?ref=page_internal" title="線上購買" rel="external" class="nav-03">線上購買</a></li>
+          	<li><a href="https://www.facebook.com/camomillablutaiwan/app_251458316228" title="線上購買" rel="external" class="nav-03">線上購買</a></li>
           	<li><a href="content/contact.html" title="聯絡我們" class="nav-04">聯絡我們</a></li>
           </ul>
        </nav>
@@ -35,7 +35,7 @@
           <ul>
           	<li><a href="https://www.facebook.com/camomillablutaiwan" title="Facebook粉絲頁" rel="external" class="subnav-01">Facebook粉絲頁</a></li>
           	<li><a href="mailto:info@axceedtrade.com" title="聯絡我們" class="subnav-02">聯絡我們</a></li>
-          	<li><a href="https://www.facebook.com/camomillablutaiwan/app_410312912374011?ref=page_internal" title="線上購買" rel="external" class="subnav-03">線上購買</a></li>
+          	<li><a href="https://www.facebook.com/camomillablutaiwan/app_251458316228" title="線上購買" rel="external" class="subnav-03">線上購買</a></li>
           </ul>
        </div>
        <br class="clean">
@@ -64,19 +64,19 @@
              		<img src="images/pic_hotsale-01.jpg" alt="天然荷荷芭按摩油">
              		<h4>天然荷荷芭按摩油</h4>
              		<p>天然荷荷芭油中，放入新鮮洋甘菊花浸泡30天，萃取精華融入荷荷芭油中...</p>
-             		<a href="#" title="詳細介紹">詳細介紹</a>
+             		<a href="content/products-CAM302.html" title="詳細介紹">詳細介紹</a>
              	</li>
              	<li>
              		<img src="images/pic_hotsale-02.jpg" alt="私密潔浴露中性日用型 PH5.5">
              		<h4>私密潔浴露<br>中性日用型 PH5.5</h4>
              		<p>清潔成分為天然椰子油萃取，搭配保濕尿素，呵護私密部位，潤澤肌膚...</p>
-             		<a href="#" title="詳細介紹">詳細介紹</a>
+             		<a href="content/products-CAM316.html" title="詳細介紹">詳細介紹</a>
              	</li>
              	<li>
              		<img src="images/pic_hotsale-03.jpg" alt="清透高效防曬乳SPF30">
              		<h4>清透高效防曬乳SPF30</h4>
              		<p>乳油木果脂和椰子油為基底，溫和有效地阻擋UVA / UVB傷害不含石化礦物油，保持毛孔通暢...</p>
-             		<a href="#" title="詳細介紹">詳細介紹</a>
+             		<a href="content/products-SOL002.html" title="詳細介紹">詳細介紹</a>
              	</li>
              </ul>
              <br class="clean">
