商品列表頁完成 #20150312

--- a/content/profile.html
+++ b/content/profile.html
@@ -8,7 +8,7 @@
 <link rel="shortcut icon"  href="../images/favicon.ico"/>
 <link rel="icon" href="../images/favicon.ico"/>
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>藍色洋甘菊camomillaBLU 安全天然充滿愛與歡笑的肌膚保養</title>
+<title>品牌宗旨│藍色洋甘菊camomillaBLU 安全天然充滿愛與歡笑的肌膚保養</title>
 <!-- InstanceEndEditable -->
 <link rel="stylesheet" href="../css/reset.css" />
 <link rel="stylesheet" href="../css/xue_201503.css"/>
