--- a/content/qc.html
+++ b/content/qc.html
@@ -1,10 +1,108 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="zh-tw"><!-- InstanceBegin template="/Templates/blutemp.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
-<meta charset="utf-8">
-<title>無標題文件</title>
+<meta charset="utf-8" lang="zh-tw">
+<meta name="description" content="藍色洋甘菊camomillaBLU，安全天然、充滿愛與歡笑的肌膚保養，提供對家人的愛及專業嚴選的良心"/>
+<meta name="keywords" content="藍色洋甘菊, camomillaBLU, 義大利, 肌膚清潔保養, 德國洋甘菊精油, 嬰兒皮膚, 親子清潔, 女性私密"/>
+<meta name="Author" content="axceedtrade Inc." />
+<link rel="shortcut icon"  href="../images/favicon.ico"/>
+<link rel="icon" href="../images/favicon.ico"/>
+<!-- InstanceBeginEditable name="doctitle" -->
+<title>品質控管│藍色洋甘菊camomillaBLU 安全天然充滿愛與歡笑的肌膚保養</title>
+<!-- InstanceEndEditable -->
+<link rel="stylesheet" href="../css/reset.css" />
+<link rel="stylesheet" href="../css/xue_201503.css"/>
+<link rel="stylesheet" href="../css/jquery.fancybox.css"/>
+<!--[if lt IE 9]>
+    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
+<!--[if IE 7]>
+	<script src="http://letskillie6.googlecode.com/svn/trunk/2/zh_TW.js"></script>
+<![endif]-->
+<!-- InstanceBeginEditable name="head" -->
+<!-- InstanceEndEditable -->
 </head>
 
 <body>
+<div id="wrap">
+   <h1><a href="../index.html" title="返回首頁">藍色洋甘菊camomillaBLU</a></h1>
+   <header>
+       <nav>
+       <!-- InstanceBeginEditable name="main-nav" -->
+         <ul>
+           <li><a href="profile.html" title="品牌故事" class="nav-01 navin">品牌故事</a></li>
+           <li><a href="shop.html" title="商品櫥窗" class="nav-02">商品櫥窗</a></li>
+           <li><a href="https://www.facebook.com/camomillablutaiwan/app_251458316228" title="線上購買" rel="external" class="nav-03">線上購買</a></li>
+           <li><a href="contact.html" title="聯絡我們" class="nav-04">聯絡我們</a></li>
+         </ul>
+         <!-- InstanceEndEditable -->
+       </nav>
+       <div id="subnav">
+          <ul>
+          	<li><a href="https://www.facebook.com/camomillablutaiwan" title="Facebook粉絲頁" rel="external" class="subnav-01">Facebook粉絲頁</a></li>
+          	<li><a href="mailto:info@axceedtrade.com" title="聯絡我們" class="subnav-02">聯絡我們</a></li>
+          	<li><a href="https://www.facebook.com/camomillablutaiwan/app_251458316228" title="線上購買" rel="external" class="subnav-03">線上購買</a></li>
+          </ul>
+       </div>
+       <br class="clean">
+   </header>
+   
+   <div id="bodyer">
+     <!-- InstanceBeginEditable name="page-banner" -->
+         <div id="page_banner" class="section-01">
+           <h2 class="ptitle-01">品牌故事</h2>
+         </div>
+     <!-- InstanceEndEditable -->
+     <div id="containter">
+          <aside id="submenu">
+            <!-- InstanceBeginEditable name="sub-menu" -->
+            <ul>
+              <li><a href="profile.html" title="品牌宗旨">品牌宗旨</a></li>
+              <li><a href="feature.html" title="產品特色">產品特色</a></li>
+              <li><a href="qc.html" title="品質控管">品質控管</a></li>
+            </ul>
+            <!-- InstanceEndEditable -->
+        </aside>
+          
+          <!-- InstanceBeginEditable name="page-main" -->
+              <section id="page_main">
+                <h3 class="hidden">品質控管</h3>
+                <div class="bar_tool">
+                  <div class="fb-like" data-href="http://www.camomillablu.com/" data-width="150px" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div>
+                  <div class="bar_cookie"><span>首頁</span>&gt;品牌故事&gt;品質控管</div>
+                  <br class="clean">
+                </div>
+                
+                <section class="box_muti">
+                  <h3>camomillaBLU 品質控管</h3>
+                  <p>每項商品出廠時皆檢測微生物、重金屬殘留，確保安全。代理商進口後也委託SGS再次檢測，品質安全有保證。</p>
+                  <p>防曬乳的防曬係數及私密潔浴露酸鹼值也通過SGS檢驗，更不惜成本投保1000萬產品責任險。我們相信提供高品質商品，是永續經營的唯一關鍵。</p>
+                </section>
+              </section>
+          <!-- InstanceEndEditable -->
+          <br class="clean"> 
+   </div>
+   
+   <footer>
+      <p>藍色洋甘菊 版權所有 camomillaBLU.&copy;2015 All RIGHTS RESERVED. Site by <a href="http://www.dr-idesign.com/" title="艾瑟麒有限公司" rel="external">idesign </a>&amp; <a href="http://www.xuedesign.tw/" title="開始設計工作室" rel="external">xuedesign</a>.</p>
+      <p class="hidden">製作單位：版面設計+網站製作/ 開始設計工作室 Elmo</p>
+      <p></p>
+   </footer>
+  </div>
+</div>
+   
+<script src="http://code.jquery.com/jquery.min.js"></script>
+<script src="../script/jquery.lazyload.js"></script>
+<script src="../script/jquery.ui.totop.js"></script>
+<script src="../script/easing.js"></script>
+<script> $(document).ready(function(){$().UItoTop({easingType:"easeOutQuart"})}); </script>
+<script src="../script/jquery.fancybox.pack.js"></script>
+<script src="../script/jquery.fancybox-media.js"></script>
+<script>
+	  $(document).ready(function(){$(".fancybox").fancybox();$(".fancybox-effects-a").fancybox({helpers:{title:{type:"outside"},overlay:{speedOut:0}}});$(".fancybox-effects-b").fancybox({openEffect:"none",closeEffect:"none",helpers:{title:{type:"over"}}});$(".fancybox-effects-c").fancybox({wrapCSS:"fancybox-custom",closeClick:!0,openEffect:"none",helpers:{title:{type:"inside"},overlay:{css:{background:"rgba(238,238,238,0.85)"}}}});$(".fancybox-effects-d").fancybox({padding:0,openEffect:"elastic",openSpeed:150,
+	  closeEffect:"elastic",closeSpeed:150,closeClick:!0,helpers:{overlay:null}});$(".fancybox-buttons").fancybox({openEffect:"none",closeEffect:"none",prevEffect:"none",nextEffect:"none",closeBtn:!1,helpers:{title:{type:"inside"},buttons:{}},afterLoad:function(){this.title="Image "+(this.index+1)+" of "+this.group.length+(this.title?" - "+this.title:"")}});$(".fancybox-thumbs").fancybox({prevEffect:"none",nextEffect:"none",closeBtn:!1,arrows:!1,nextClick:!0,helpers:{thumbs:{width:50,height:50}}});$(".fancybox-media").attr("rel",
+	  "media-gallery").fancybox({openEffect:"none",closeEffect:"none",prevEffect:"none",nextEffect:"none",arrows:!1,helpers:{media:{},buttons:{}}});$("#fancybox-manual-a").click(function(){$.fancybox.open("1_b.jpg")});$("#fancybox-manual-b").click(function(){$.fancybox.open({href:"iframe.html",type:"iframe",padding:5})});$("#fancybox-manual-c").click(function(){$.fancybox.open([{href:"1_b.jpg",title:"My title"},{href:"2_b.jpg",title:"2nd title"},{href:"3_b.jpg"}],{helpers:{thumbs:{width:75,height:50}}})})});    
+  </script>
+<script src="../script/web_set.js"></script>
 </body>
-</html>
+<!-- InstanceEnd --></html>
