網站切版完成 #20150313

--- a/content/contact.html
+++ b/content/contact.html
@@ -74,7 +74,13 @@
                 </div>
                 
                 <section class="box_contact">
-                       
+                    <span class="bg_meadow"></span>
+                    <h3>兩岸三地總代理: 錡躍國際有限公司</h3>
+                    <ul>
+                    	<li>TEL：02-25851170</li>
+                    	<li>FAX：02-25851173</li>
+                    	<li>Email：<a href="mailto:info@axceedtrade.com" title="聯絡我們">info@axceedtrade.com</a></li>
+                    </ul>
                 </section>
              </section>
           <!-- InstanceEndEditable -->
