--- a/content/products-SOL003.html
+++ b/content/products-SOL003.html
@@ -98,7 +98,7 @@
                       </div>
                       
                       <div class="box_btn">
-                         <a href="https://www.facebook.com/camomillablutaiwan/app_251458316228" title="立即購買" rel="external" class="btn_buy">立即購買</a>
+                         <a href="http://camomillablu.ecwid.com/#!/藍色洋甘菊-嬰兒鎮定舒緩乳液/p/48159344/category=12532621" title="立即購買" rel="external" class="btn_buy">立即購買</a>
                          <a href="shop.html" title="返回上頁" class="btn_back">返回上頁</a>
                       </div>
                       <br class="clean">
