--- a/content/qc.html
+++ b/content/qc.html
@@ -75,8 +75,35 @@
                 
                 <section class="box_muti">
                   <h3>camomillaBLU 品質控管</h3>
+                  <img src="../images/pic_qcbanner.jpg" alt="*" style="margin-bottom:15px">
                   <p>每項商品出廠時皆檢測微生物、重金屬殘留，確保安全。代理商進口後也委託SGS再次檢測，品質安全有保證。</p>
                   <p>防曬乳的防曬係數及私密潔浴露酸鹼值也通過SGS檢驗，更不惜成本投保1000萬產品責任險。我們相信提供高品質商品，是永續經營的唯一關鍵。</p>
+                </section>
+                
+                <section class="box_muti">
+                  <h3>camomillaBLU 公開檢測報告</h3>
+                  <div class="box_report">
+                     <ul>
+                     	<li><a href="../files/report_01.pdf" title="義大利原廠洋甘菊產地證明(匈牙利)" rel="external">
+                     			<h5>義大利原廠<br>產地證明</h5>
+                     		</a></li>
+                     	<li><a href="../files/report_02.pdf" title="原廠品質測試合格報告" rel="external">
+                     			<h5>品質測試<br>合格報告</h5>
+                     		</a></li>
+                     	<li><a href="../files/report_03.pdf" title="原廠微生物細菌總數測試合格報告" rel="external">
+                     			<h5>微生物細菌<br>測試報告</h5>
+                     		</a></li>
+                     	<li><a href="../files/report_04.pdf" title="產品責任書證明1000萬" rel="external">
+                     			<h5>產品責任書<br>證明</h5>
+                     		</a></li>
+                     	<li><a href="../files/report_05.pdf" title="SGS防曬係數報告_SOL001" rel="external">
+                     			<h5>SGS防曬<br>係數報告</h5>
+                     		</a></li>
+                     	<li><a href="../files/report_06.pdf" title="SGS防曬係數報告_SOL002" rel="external">
+                     			<h5>SGS防曬<br>係數報告</h5>
+                     		</a></li>
+                     </ul>
+                  </div>
                 </section>
               </section>
           <!-- InstanceEndEditable -->
