--- a/content/shop.html
+++ b/content/shop.html
@@ -76,7 +76,7 @@
                 <section id="box_shop">
                    <h3 id="shoplist-01">精華清潔保養系列</h3>
                    <ul class="box_productslist">
-                      <li><a href="product-CAM301.html">
+                      <li><a href="products-CAM301.html">
                               <img src="../images/pic_produce-s01.png" alt="嬰兒護膚修護膏">
                               <h5>嬰兒護膚修護膏</h5>
                               <p>$680</p>
