--- a/content/products-CAM315.html
+++ b/content/products-CAM315.html
@@ -95,10 +95,14 @@
                                 <li>主要成份：月桂醇硫酸酯鎂、德國洋甘菊花萃取、乳酸</li>
                             	<li>容量：300ML</li>
                             </ul>
+                         <h4>【產品檢測報告】</h4>
+                             <ul>
+                                <li><a href="../files/SGS_CAM-315.pdf" rel="external">SGS酸鹼值報告</a></li> 
+                             </ul>
                       </div>
                       
                       <div class="box_btn">
-                         <a href="https://www.facebook.com/camomillablutaiwan/app_251458316228" title="立即購買" rel="external" class="btn_buy">立即購買</a>
+                         <a href="http://camomillablu.ecwid.com/#!/藍色洋甘菊-私密潔浴露PH3-5-弱酸呵護型/p/48159319/category=12539176" title="立即購買" rel="external" class="btn_buy">立即購買</a>
                          <a href="shop.html" title="返回上頁" class="btn_back">返回上頁</a>
                       </div>
                       <br class="clean">
