--- a/content/products-CAM309.html
+++ b/content/products-CAM309.html
@@ -99,7 +99,7 @@
                       </div>
                       
                       <div class="box_btn">
-                         <a href="https://www.facebook.com/camomillablutaiwan/app_251458316228" title="立即購買" rel="external" class="btn_buy">立即購買</a>
+                         <!--<a href="https://www.facebook.com/camomillablutaiwan/app_251458316228" title="立即購買" rel="external" class="btn_buy">立即購買</a>-->
                          <a href="shop.html" title="返回上頁" class="btn_back">返回上頁</a>
                       </div>
                       <br class="clean">
