網站修改 #20150318 1.線上商店連結修改 2.品質控管內容調整

--- a/content/feature.html
+++ b/content/feature.html
@@ -32,7 +32,7 @@
          <ul>
            <li><a href="profile.html" title="品牌故事" class="nav-01 navin">品牌故事</a></li>
            <li><a href="shop.html" title="商品櫥窗" class="nav-02">商品櫥窗</a></li>
-           <li><a href="https://www.facebook.com/camomillablutaiwan/app_251458316228" title="線上購買" rel="external" class="nav-03">線上購買</a></li>
+           <li><a href="http://www.camomillablushop.com/" title="線上購買" rel="external" class="nav-03">線上購買</a></li>
            <li><a href="contact.html" title="聯絡我們" class="nav-04">聯絡我們</a></li>
          </ul>
          <!-- InstanceEndEditable -->
@@ -41,7 +41,7 @@
           <ul>
           	<li><a href="https://www.facebook.com/camomillablutaiwan" title="Facebook粉絲頁" rel="external" class="subnav-01">Facebook粉絲頁</a></li>
           	<li><a href="mailto:info@axceedtrade.com" title="聯絡我們" class="subnav-02">聯絡我們</a></li>
-          	<li><a href="https://www.facebook.com/camomillablutaiwan/app_251458316228" title="線上購買" rel="external" class="subnav-03">線上購買</a></li>
+          	<li><a href="http://www.camomillablushop.com/" title="線上購買" rel="external" class="subnav-03">線上購買</a></li>
           </ul>
        </div>
        <br class="clean">
@@ -83,7 +83,7 @@
 孔自在呼吸不阻塞。</p>   
                 </section>
                 
-                <section class="box_muti">
+                <!--<section class="box_muti">
                   <h3>camomillaBLU 義大利原廠工作影像</h3>
                   <div class="box_photo">
                      <ul>
@@ -114,7 +114,7 @@
                      </ul>
                      <br class="clean">
                   </div>
-                </section>  
+                </section>-->  
               </section>
           <!-- InstanceEndEditable -->
           <br class="clean"> 
