--- a/content/qc.html
+++ b/content/qc.html
@@ -32,7 +32,7 @@
          <ul>
            <li><a href="profile.html" title="品牌故事" class="nav-01 navin">品牌故事</a></li>
            <li><a href="shop.html" title="商品櫥窗" class="nav-02">商品櫥窗</a></li>
-           <li><a href="https://www.facebook.com/camomillablutaiwan/app_251458316228" title="線上購買" rel="external" class="nav-03">線上購買</a></li>
+           <li><a href="http://www.camomillablushop.com/" title="線上購買" rel="external" class="nav-03">線上購買</a></li>
            <li><a href="contact.html" title="聯絡我們" class="nav-04">聯絡我們</a></li>
          </ul>
          <!-- InstanceEndEditable -->
@@ -41,7 +41,7 @@
           <ul>
           	<li><a href="https://www.facebook.com/camomillablutaiwan" title="Facebook粉絲頁" rel="external" class="subnav-01">Facebook粉絲頁</a></li>
           	<li><a href="mailto:info@axceedtrade.com" title="聯絡我們" class="subnav-02">聯絡我們</a></li>
-          	<li><a href="https://www.facebook.com/camomillablutaiwan/app_251458316228" title="線上購買" rel="external" class="subnav-03">線上購買</a></li>
+          	<li><a href="http://www.camomillablushop.com/" title="線上購買" rel="external" class="subnav-03">線上購買</a></li>
           </ul>
        </div>
        <br class="clean">
@@ -103,6 +103,39 @@
                      			<h5>SGS防曬<br>係數報告</h5>
                      		</a></li>
                      </ul>
+                  </div>
+                </section>
+                <br>
+                <section class="box_muti">
+                  <h3>camomillaBLU 義大利原廠工作影像</h3>
+                  <div class="box_photo">
+                     <ul>
+                     	<li><a class="fancybox" rel="gallery1" href="../images/pic_italy-01.jpg" title="義大利原廠工作影像01">
+                              <img src="../images/pic_italy-s01.jpg" alt="義大利原廠工作影像01">
+                           </a>
+                        </li>
+                     	<li><a class="fancybox" rel="gallery1" href="../images/pic_italy-02.jpg" title="義大利原廠工作影像02">
+                              <img src="../images/pic_italy-s02.jpg" alt="義大利原廠工作影像02">
+                           </a>
+                        </li>
+                        <li><a class="fancybox" rel="gallery1" href="../images/pic_italy-03.jpg" title="義大利原廠工作影像03">
+                              <img src="../images/pic_italy-s03.jpg" alt="義大利原廠工作影像03">
+                           </a>
+                        </li>
+                        <li><a class="fancybox" rel="gallery1" href="../images/pic_italy-04.jpg" title="義大利原廠工作影像04">
+                              <img src="../images/pic_italy-s04.jpg" alt="義大利原廠工作影像04">
+                           </a>
+                        </li>
+                        <li><a class="fancybox" rel="gallery1" href="../images/pic_italy-05.jpg" title="義大利原廠工作影像05">
+                              <img src="../images/pic_italy-s05.jpg" alt="義大利原廠工作影像05">
+                           </a>
+                        </li>
+                        <li><a class="fancybox" rel="gallery1" href="../images/pic_italy-06.jpg" title="義大利原廠工作影像06">
+                              <img src="../images/pic_italy-s06.jpg" alt="義大利原廠工作影像06">
+                           </a>
+                        </li>
+                     </ul>
+                     <br class="clean">
                   </div>
                 </section>
               </section>
