--- a/content/products-SOL002.html
+++ b/content/products-SOL002.html
@@ -32,7 +32,7 @@
          <ul>
            <li><a href="profile.html" title="品牌故事" class="nav-01">品牌故事</a></li>
            <li><a href="shop.html" title="商品櫥窗" class="nav-02 navin">商品櫥窗</a></li>
-           <li><a href="https://www.facebook.com/camomillablutaiwan/app_251458316228" title="線上購買" rel="external" class="nav-03">線上購買</a></li>
+           <li><a href="http://www.camomillablushop.com/" title="線上購買" rel="external" class="nav-03">線上購買</a></li>
            <li><a href="contact.html" title="聯絡我們" class="nav-04">聯絡我們</a></li>
          </ul>
          <!-- InstanceEndEditable -->
@@ -41,7 +41,7 @@
           <ul>
           	<li><a href="https://www.facebook.com/camomillablutaiwan" title="Facebook粉絲頁" rel="external" class="subnav-01">Facebook粉絲頁</a></li>
           	<li><a href="mailto:info@axceedtrade.com" title="聯絡我們" class="subnav-02">聯絡我們</a></li>
-          	<li><a href="https://www.facebook.com/camomillablutaiwan/app_251458316228" title="線上購買" rel="external" class="subnav-03">線上購買</a></li>
+          	<li><a href="http://www.camomillablushop.com/" title="線上購買" rel="external" class="subnav-03">線上購買</a></li>
           </ul>
        </div>
        <br class="clean">
@@ -99,7 +99,7 @@
                       </div>
                       
                       <div class="box_btn">
-                         <a href="http://camomillablu.ecwid.com/#!/藍色洋甘菊-清透高效防曬乳SPF30/p/48159333/category=12532626" title="立即購買" rel="external" class="btn_buy">立即購買</a>
+                         <a href="http://www.camomillablushop.com/products/5502f92f5eb0348a32000227" title="立即購買" rel="external" class="btn_buy">立即購買</a>
                          <a href="shop.html" title="返回上頁" class="btn_back">返回上頁</a>
                       </div>
                       <br class="clean">
