--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <ul>
           	<li><a href="content/profile.html" title="品牌故事" class="nav-01">品牌故事</a></li>
           	<li><a href="content/shop.html" title="商品櫥窗" class="nav-02">商品櫥窗</a></li>
-          	<li><a href="https://www.facebook.com/camomillablutaiwan/app_251458316228" title="線上購買" rel="external" class="nav-03">線上購買</a></li>
+          	<li><a href="http://www.camomillablushop.com/" title="線上購買" rel="external" class="nav-03">線上購買</a></li>
           	<li><a href="content/contact.html" title="聯絡我們" class="nav-04">聯絡我們</a></li>
           </ul>
        </nav>
@@ -35,7 +35,7 @@
           <ul>
           	<li><a href="https://www.facebook.com/camomillablutaiwan" title="Facebook粉絲頁" rel="external" class="subnav-01">Facebook粉絲頁</a></li>
           	<li><a href="mailto:info@axceedtrade.com" title="聯絡我們" class="subnav-02">聯絡我們</a></li>
-          	<li><a href="https://www.facebook.com/camomillablutaiwan/app_251458316228" title="線上購買" rel="external" class="subnav-03">線上購買</a></li>
+          	<li><a href="http://www.camomillablushop.com/" title="線上購買" rel="external" class="subnav-03">線上購買</a></li>
           </ul>
        </div>
        <br class="clean">
