產品特色新增成分圖片 #20150319

--- a/content/feature.html
+++ b/content/feature.html
@@ -83,38 +83,30 @@
 孔自在呼吸不阻塞。</p>   
                 </section>
                 
-                <!--<section class="box_muti">
-                  <h3>camomillaBLU 義大利原廠工作影像</h3>
-                  <div class="box_photo">
+                <section class="box_muti">
+                  <h3>camomillaBLU 嚴選成分</h3>
+                  <div class="box_components">
                      <ul>
-                     	<li><a class="fancybox" rel="gallery1" href="../images/pic_italy-01.jpg" title="義大利原廠工作影像01">
-                              <img src="../images/pic_italy-s01.jpg" alt="義大利原廠工作影像01">
-                           </a>
+                     	<li>
+                          <span class="cc-01"></span>
+                          <p>德國洋甘菊</p>
                         </li>
-                     	<li><a class="fancybox" rel="gallery1" href="../images/pic_italy-02.jpg" title="義大利原廠工作影像02">
-                              <img src="../images/pic_italy-s02.jpg" alt="義大利原廠工作影像02">
-                           </a>
+                     	<li>
+                          <span class="cc-02"></span>
+                          <p>椰子油</p>
                         </li>
-                        <li><a class="fancybox" rel="gallery1" href="../images/pic_italy-03.jpg" title="義大利原廠工作影像03">
-                              <img src="../images/pic_italy-s03.jpg" alt="義大利原廠工作影像03">
-                           </a>
+                        <li>
+                          <span class="cc-03"></span>
+                          <p>甜菜根</p>
                         </li>
-                        <li><a class="fancybox" rel="gallery1" href="../images/pic_italy-04.jpg" title="義大利原廠工作影像04">
-                              <img src="../images/pic_italy-s04.jpg" alt="義大利原廠工作影像04">
-                           </a>
-                        </li>
-                        <li><a class="fancybox" rel="gallery1" href="../images/pic_italy-05.jpg" title="義大利原廠工作影像05">
-                              <img src="../images/pic_italy-s05.jpg" alt="義大利原廠工作影像05">
-                           </a>
-                        </li>
-                        <li><a class="fancybox" rel="gallery1" href="../images/pic_italy-06.jpg" title="義大利原廠工作影像06">
-                              <img src="../images/pic_italy-s06.jpg" alt="義大利原廠工作影像06">
-                           </a>
+                        <li>
+                          <span class="cc-04"></span>
+                          <p>荷荷芭油</p>
                         </li>
                      </ul>
                      <br class="clean">
                   </div>
-                </section>-->  
+                </section>
               </section>
           <!-- InstanceEndEditable -->
           <br class="clean"> 
