--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
           </section>
           
           <h3 class="hidden">藍色洋甘菊camomillaBLU 粉絲專頁</h3>
-          <div class="fb-like-box" data-href="https://www.facebook.com/camomillablutaiwan" data-width="280" data-colorscheme="light" data-show-faces="true" data-header="false" data-stream="true" data-show-border="true"></div>
+          <!--<div class="fb-like-box" data-href="https://www.facebook.com/camomillablutaiwan" data-width="280" data-colorscheme="light" data-show-faces="true" data-header="false" data-stream="true" data-show-border="true"></div>-->
+          <div class="fb-page" data-href="https://www.facebook.com/camomillablutaiwan" data-width="280" data-height="550" data-hide-cover="true" data-show-facepile="true" data-show-posts="true"></div>
           <br class="clean">
        </div>
    </div>
